actually fix vertical overflow this time

--- a/src/components/styles/Activities.scss
+++ b/src/components/styles/Activities.scss
@@ -100,4 +100,8 @@
 .feedback-link {
   color: lime;
   text-decoration: underline;
+
+  &:hover {
+    filter: brightness(90%);
+  }
 }
