--- a/src/components/styles/CompressionGame.scss
+++ b/src/components/styles/CompressionGame.scss
@@ -54,7 +54,7 @@
   max-width: 40%;
   max-height: 90%;
   width: 90%;
-  height: fit-content;
+  height: 100%;
   margin: 2%;
   border-radius: 20px;
 
@@ -65,7 +65,7 @@
 }
 
 .gif img {
-  width: 90%;
+  width: auto;
   border-radius: 20px;
   height: 100%;
 
